Changelog
=========

1.2 - unreleased
------------------

- Merge PLIP 9352. 
  [esteele]
  
- Applied styles for search filter on search results page.
  References http://dev.plone.org/plone/ticket/9352
  [spliter]
  
1.1.5 - 2011-07-04
------------------

- Fixed IE8 issue where a ghost top-margin would appear above the
  headline in the folder summary listing.
  [malthe]

- Add shadow and border for iframe overlays to match images and ajax overlays.
  [smcmahon]

- Fixed: portal footer is in a 'row' div.
  [thomasdesvenain]

- Clean up HTML comments in main_template.
  [davisagli]

- Add ids on content core viewlet managers.
  [thomasdesvenain]

- Fixed: siteactions background-color was applied to whole page.
  Add a clear: left.
  [thomasdesvenain]

- Add IEFixes.css to CSS registry in case plonetheme.classic is not installed.
  [elro]

- Removed comment in IEFixes.css concerning the now removed IE8.js.
  [elro]

- Fixed: spinner is back in main_template.
  [thomasdesvenain]

1.1.4 - 2011-05-13
------------------

- Add styling for dragdropreorder.js.
  [elro]

1.1.3 - 2011-05-12
------------------

- Add styling for z3cform multi-widget.
  [elro]

- Optimize images and icon file sizes.
  [hannosch]

- Updated base_properties values with new sunburst theme CSS values.
  [thomasdesvenain]

- Removed `clear:both` on `.image-left` and `.image-right` rules.
  [vincentfretin]

- Add MANIFEST.in.
  [WouterVH]


1.1.2 - 2011-03-02
------------------

- Make text input fields have a default width of 20em when no size is set.
  [elro]

- Hide plone.app.discussion comment viewlet from print.
  [timo]


1.1.1 - 2011-02-10
------------------

- Renamed options box in IEFixes for keyword multiple select enhancement PLIP.
  Refs http://dev.plone.org/plone/ticket/11017.
  [rmattb]


1.1 - 2011-02-04
----------------

- Merge PLIP 11017: Tags MultiSelectionWidget w/scrollbar & checkboxes.
  [esteele]


1.0.6 - 2011-01-18
------------------
