@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_css">
-
- <stylesheet id="IEFixes.css" conditionalcomment="lt IE 8" />
-
-</object>
